e2e/testdata/both-basic-output.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      bar/both-basic-permissive, service helloworld
  creationTimestamp: null
  name: both-basic-permissive-helloworld
  namespace: bar
spec:
  mtls:
    mode: PERMISSIVE
  selector:
    matchLabels:
      app: helloworld

---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      bar/both-basic-permissive, service helloworld
  creationTimestamp: null
  name: both-basic-permissive-helloworld
  namespace: bar
spec:
  jwtRules:
  - issuer: testing@secure.istio.io
    jwksUri: https://raw.githubusercontent.com/istio/istio/release-1.4/security/tools/jwt/samples/jwks.json
  selector:
    matchLabels:
      app: helloworld

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      bar/both-basic-permissive, service helloworld
  creationTimestamp: null
  name: both-basic-permissive-helloworld
  namespace: bar
spec:
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals:
        - '*'
  selector:
    matchLabels:
      app: helloworld

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      bar/both-basic-strict, service httpbin
  creationTimestamp: null
  name: both-basic-strict-httpbin
  namespace: bar
spec:
  mtls:
    mode: STRICT
  selector:
    matchLabels:
      app: httpbin

---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      bar/both-basic-strict, service httpbin
  creationTimestamp: null
  name: both-basic-strict-httpbin
  namespace: bar
spec:
  jwtRules:
  - issuer: testing@secure.istio.io
    jwksUri: https://raw.githubusercontent.com/istio/istio/release-1.4/security/tools/jwt/samples/jwks.json
  selector:
    matchLabels:
      app: httpbin

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      bar/both-basic-strict, service httpbin
  creationTimestamp: null
  name: both-basic-strict-httpbin
  namespace: bar
spec:
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals:
        - '*'
  selector:
    matchLabels:
      app: httpbin

---
