e2e/testdata/both-port-level-input.yaml
apiVersion: "authentication.istio.io/v1alpha1"
kind: "MeshPolicy"
metadata:
  name: "default"
spec:
  peers:
    - mtls: {}
---
# An Policy that disables mTLS and enables JWT for the httpbin service on port 8000
apiVersion: authentication.istio.io/v1alpha1
kind: Policy
metadata:
  name: httpbin
  namespace: foo
spec:
  targets:
    - name: httpbin
      ports:
        - number: 8000
  peers:
    - mtls:
        mode: PERMISSIVE
  origins:
    - jwt:
        issuer: "testing@secure.istio.io"
        jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.4/security/tools/jwt/samples/jwks.json"
        triggerRules:
          - includedPaths:
              - prefix: /links/
            excludedPaths:
              - exact: /links/1/1
  principalBinding: USE_ORIGIN
---
