e2e/testdata/both-port-level-output.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      foo/httpbin, service httpbin
  creationTimestamp: null
  name: httpbin-httpbin
  namespace: foo
spec:
  portLevelMtls:
    "8000":
      mode: PERMISSIVE
  selector:
    matchLabels:
      app: httpbin

---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      foo/httpbin, service httpbin
  creationTimestamp: null
  name: httpbin-httpbin
  namespace: foo
spec:
  jwtRules:
  - issuer: testing@secure.istio.io
    jwksUri: https://raw.githubusercontent.com/istio/istio/release-1.4/security/tools/jwt/samples/jwks.json
  selector:
    matchLabels:
      app: httpbin

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      foo/httpbin, service httpbin
  creationTimestamp: null
  name: httpbin-httpbin
  namespace: foo
spec:
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals:
        - '*'
    to:
    - operation:
        notPaths:
        - /links/1/1
        paths:
        - /links/*
        ports:
        - "8000"
  selector:
    matchLabels:
      app: httpbin

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      /default, mesh level policy
  creationTimestamp: null
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT

---
