e2e/testdata/jwt-trigger-rule-exclude-input.yaml
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: "jwt-exclude"
  namespace: foo
spec:
  targets:
    - name: httpbin
  origins:
    - jwt:
        issuer: "testing@secure.istio.io"
        jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.4/security/tools/jwt/samples/jwks.json"
        triggerRules:
          - excludedPaths:
              - exact: /headers
              - prefix: /links
  principalBinding: USE_ORIGIN
