e2e/testdata/mtls-httpbin-helloworld-input.yaml
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: "httpbin-helloworld"
  namespace: foo
spec:
  targets:
    - name: httpbin
    - name: helloworld
  peers:
    - mtls: {}
