e2e/testdata/mtls-httpbin-input.yaml
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: "httpbin"
  namespace: "bar"
spec:
  targets:
    - name: httpbin
  peers:
    - mtls: {}
