e2e/testdata/mtls-httpbin-output.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      foo/httpbin, service httpbin
  creationTimestamp: null
  name: httpbin-httpbin
  namespace: foo
spec:
  mtls:
    mode: STRICT
  selector:
    matchLabels:
      app: httpbin

---
