e2e/testdata/mtls-namespace-input.yaml
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: "default"
  namespace: foo
spec:
  peers:
    - mtls:
        mode: STRICT
---
apiVersion: "authentication.istio.io/v1alpha1"
kind: "Policy"
metadata:
  name: "default"
  namespace: bar
spec:
  peers:
    - mtls:
        mode: PERMISSIVE
